Fix for Blue Tap Highlight on Mobile

--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
+    -webkit-tap-highlight-color: transparent;
+    outline: none; /* Removes the default focus outline */
 }
 
 html,
